updated the score to show total number of attempts

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -30,7 +30,7 @@
 	<div id="game-board" class="boardclearfix"></div>
 	</section>
 	<div>
-		<h3>Score: </h3><h3 id="scoreNumber"></h3>
+		<h3>Score: <span id="scoreNumber"></span> / <span id="totalNumber"></span></h3>
 	</div>
 
 	<button id="reset">Reset</button>
